# YARMS

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  flake.nix  package.json  tsconfig.json  webpack.config.js
assets/src/: stylesheet.css
assets/src/typescript/: createRepository.ts
assets/src/typescript/lib/: bind.ts  query.ts  shorthand.ts  validate.ts
assets/src/typescript/validators/: createRepositoryForm.ts
entity/: Cargo.toml
entity/src/: lib.rs  repository.rs  repository_access_user.rs  user.rs
entity/src/utils/: json_fields.rs  mod.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
security/: Cargo.toml
security/src/: lib.rs
src/: error.rs  main.rs
src/controller/: account.rs  browse.rs  login.rs  mod.rs
src/controller/admin/: mod.rs  repositories.rs  settings.rs  users.rs
src/middlewares/: carried_context.rs  extract_current_user.rs  mod.rs
src/model/: create_repositories.rs  mod.rs
src/utils/: auth.rs  flashing.rs  mod.rs  routes.rs  template.rs  unwrapping.rs
templates/: base.html.j2  error.html.j2  index.html.j2  login.html.j2
templates/account/: base.html.j2  change_password.html.j2  dashboard.html.j2
templates/admin/: base.html.j2  dashboard.html.j2  settings.html.j2
templates/admin/repositories/: create.html.j2  manage.html.j2  repositories.html.j2
templates/admin/users/: users.html.j2
