[package]
name = "yarms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yarms-migration = { path = "migration" }
yarms-entity = { path = "entity" }
yarms-security = { path = "security" }

serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
sea-orm = { version = "^0.8.0", features = [ "sqlx-mysql", "sqlx-sqlite", "runtime-actix-native-tls", "macros", "with-json", "with-chrono" ] }
actix-web = "4"
actix-files = "0.6.1"
actix-identity = "0.4.0"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
tera = "1.16.0"
pbkdf2 = "0.11.0"
futures = "0.3.21"
chrono = "0.4.19"
minify-html = "0.9.2"

anyhow = "1.0.58"
thiserror = "1.0.31"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.17"
simple_logger = "2.2.0"
